BUG 3074, 3076, 3072: Rich layout bugs * When creating an empty layout without content, make sure it doesn't get overwfitten in the main area by only updating the preview area * When using the Unsaved View dialog on this page, do a save instead of saveNew; and don't require the name * Make the renderArea scroll, and account for scrollbar
QA:
* Make sure bugs are fixed

--- a/app/styles/screen-dataset-edit-rr.sass
+++ b/app/styles/screen-dataset-edit-rr.sass
@@ -49,7 +49,7 @@ body
     position: relative
 
   .renderArea
-    overflow: hidden
+    overflow: auto
     position: relative
 
     .dropIndicator
